@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#30779] Fatal error in single contact category list if category is unpublished. Thanks Elin Waring.
  # [#31122] archived articles module shows multiple entries same month. Thanks David Hurley.
  # [#31128] Double category description newsfeed categories. Thanks Rob de Cleen and David Hurley
+ # [#30150] com_content loads articles before error checking. Thanks Richard McDaniel.
 
 11-Jun-2013 Jean-Marie Simonet
  $ Adding Czech cs-CZ to installation language files
